massive refactor of the system map. I finally found the root of the entire problem (misunderstanding the parents list)